--- a/MrJibo/package.json
+++ b/MrJibo/package.json
@@ -9,8 +9,7 @@
   "dependencies": {
     "axios": "^0.15.2",
     "behaviorify": "^1.0.0",
-    "jibo": "^3.0.0",
-    "mongodb": "^2.2.10"
+    "jibo": "^3.0.0"
   },
   "license": "UNLICENSED"
 }
